test/invalid/baseline/enum-wo-comma.txt
Syntax error at line 1 in enum-wo-comma.widl, since `enum NoComma`:
enum NoComma { "value1" "value2" };
                        ^ No comma between enum values
